--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -6,16 +6,17 @@
     * If you would like to get a raw Response object use the other {{name}} function.
     * 
     * @param options - An object containing the options for this method.
+    * @param parameters - An object containing the parameters for this method.
     {{#each ../parameters }}
-    * @param options.parameters.{{{name}}} {{{prepend (append (getParameterDataType .) "}") "{"}}}{{#if (getValue description)}} - {{{getValue description}}}{{/if}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
     {{/each}}
     {{#each request/queryParameters}}
-    * @param options.parameters.{{{name}}} {{{prepend (append (getParameterDataType .) "}") "{"}}}{{#if (getValue description)}} - {{{getValue description}}}{{/if}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
     {{/each}}
-    * @param options.headers - An object literal of key value pairs of the headers to be
+    * @param headers - An object literal of key value pairs of the headers to be
     * sent with this request.
     {{#or (is method "patch") (is method "post") (is method "put")}}
-    * @param options.body - The data to send as the request body.
+    * @param body - The data to send as the request body.
     {{/or}}
     *
     * @returns A promise of type {{getReturnPayloadType .}}.
@@ -40,18 +41,19 @@
     * {{{ formatForTsDoc description }}}
     *
     * @param options - An object containing the options for this method.
+    * @param parameters - An object containing the parameters for this method.
     {{#each ../parameters }}
-    * @param options.parameters.{{{name}}} {{{prepend (append (getParameterDataType .) "}") "{"}}}{{#if (getValue description)}} - {{{getValue description}}}{{/if}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
     {{/each}}
     {{#each request/queryParameters}}
-    * @param options.parameters.{{{name}}} {{{prepend (append (getParameterDataType .) "}") "{"}}}{{#if (getValue description)}} - {{{getValue description}}}{{/if}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
     {{/each}}
-    * @param options.headers - An object literal of key value pairs of the headers to be
+    * @param headers - An object literal of key value pairs of the headers to be
     * sent with this request.
     {{#or (is method "patch") (is method "post") (is method "put")}}
-    * @param options.body - The data to send as the request body.
+    * @param body - The data to send as the request body.
     {{/or}}
-    * @param rawResponse {boolean} - Set to true to return entire Response object instead of DTO.
+    * @param rawResponse - Set to true to return entire Response object instead of DTO.
     *
     * @returns A promise of type Response if rawResponse is true, a promise of type {{getReturnPayloadType .}} otherwise.
     */
