--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -1,11 +1,25 @@
 {{#each model.encodes.endPoints}}
   {{#each operations}}
     /**
-    * {{description}}
+    * {{{ formatForTsDoc description }}}
     * 
     * If you would like to get a raw Response object use the other {{name}} function.
     * 
-    * @returns A promise of type {{getReturnPayloadType .}}
+    * @param options - An object containing the options for this method.
+    * @param parameters - An object containing the parameters for this method.
+    {{#each ../parameters }}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    {{#each request/queryParameters}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    * @param headers - An object literal of key value pairs of the headers to be
+    * sent with this request.
+    {{#or (is method "patch") (is method "post") (is method "put")}}
+    * @param body - The data to send as the request body.
+    {{/or}}
+    *
+    * @returns A promise of type {{getReturnPayloadType .}}.
     */
     {{name}}(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
@@ -25,9 +39,24 @@
     ): Promise<{{getReturnPayloadType .}}>;
 
     /**
-    * {{description}}
+    * {{{ formatForTsDoc description }}}
     *
-    * @returns A promise of type Response if rawResponse is true, a promise of type {{getReturnPayloadType .}} otherwise
+    * @param options - An object containing the options for this method.
+    * @param parameters - An object containing the parameters for this method.
+    {{#each ../parameters }}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    {{#each request/queryParameters}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    * @param headers - An object literal of key value pairs of the headers to be
+    * sent with this request.
+    {{#or (is method "patch") (is method "post") (is method "put")}}
+    * @param body - The data to send as the request body.
+    {{/or}}
+    * @param rawResponse - Set to true to return entire Response object instead of DTO.
+    *
+    * @returns A promise of type Response if rawResponse is true, a promise of type {{getReturnPayloadType .}} otherwise.
     */
     {{name}}<T extends boolean>(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
@@ -48,7 +77,24 @@
     ): Promise<T extends true ? Response : {{getReturnPayloadType .}}>;
 
     /**
-    * {{description}}
+    * {{{ formatForTsDoc description }}}
+    *
+    * @param options - An object containing the options for this method.
+    * @param parameters - An object containing the parameters for this method.
+    {{#each ../parameters }}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    {{#each request/queryParameters}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    * @param headers - An object literal of key value pairs of the headers to be
+    * sent with this request.
+    {{#or (is method "patch") (is method "post") (is method "put")}}
+    * @param body - The data to send as the request body.
+    {{/or}}
+    * @param rawResponse - Set to true to return entire Response object instead of DTO.
+    *
+    * @returns A promise of type Response if rawResponse is true, a promise of type {{getReturnPayloadType .}} otherwise.
     */
     {{name}}(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
